refactor(concurrency): improve thread management and locking in monitoring services (#137)
* refactor(concurrency): improve thread management and locking in monitoring services

* chore: remove unnecessary comments